--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -15,6 +15,11 @@ Eclipse 3.5 Ant Build Notes</h1>
   <li>Added API constants for Ant launch configuration attributes - <code>org.eclipse.ant.ui.launching.IAntLaunchConfigurationConstants</code>.</li>
 </ul>
 
+<h2>November 25, 2008</h2>
+<h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=253100">Bug 253100</a>: 'Builders' property page should remember it has warned the user<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=256299">Bug 256299</a>: Simplify setup of ContentAssistAction<br>
+
 <h2>November 18, 2008</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=255370">Bug 255370</a>: AntBuildfileContentDescriber should extend org.eclipse.core.runtime.content.XMLContentDescriber<br>
