The map file has been updated for the following Bug changes: + Bug 196333. [History View] Compare reuses editor although option is off (FIXED) + Bug 228739. [Proxy] add UI support to see what the automatically detected proxy settings are (FIXED) + Bug 247408. [Net] Deprecate getProxyDataForHost(String) in the IProxyService API (FIXED) + Bug 249733. [Net] System proxy providers should use constants (FIXED) + Bug 255088. [Net] Malformed \uxxxx encoding exception in UnixProxyProvider.getEnv() (FIXED) + Bug 255616. [Net] Add proxy providers layer on the top of ProxyManager (FIXED) + Bug 255814. [Net] Wrong methods and types used in org.eclipse.core.net (FIXED) + Bug 255959. [Net] Windows IE setting "Use the same proxy server for all protocols" is not consumed by Eclipse (FIXED) + Bug 255981. [Net] Setting direct provider on ProxySelector doesn't affect ProxyManager (FIXED) + Bug 256080. [Net] New UI for proxy preferences show password in plain text (FIXED) + Bug 256081. [Net] Remove unnecessary API from IProxyData (FIXED)
The following projects have changed:
org.eclipse.ui.net
org.eclipse.core.tests.net
org.eclipse.core.net
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,22 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (November 25, 2008, 1:17 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=196333">Bug 196333</a>. [History View] Compare reuses editor although option is off (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=228739">Bug 228739</a>. [Proxy] add UI support to see what the automatically detected proxy settings are (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=247408">Bug 247408</a>. [Net] Deprecate getProxyDataForHost(String) in the IProxyService API (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=249733">Bug 249733</a>. [Net] System proxy providers should use constants (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255088">Bug 255088</a>. [Net] Malformed \uxxxx encoding exception in UnixProxyProvider.getEnv() (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255616">Bug 255616</a>. [Net] Add proxy providers layer on the top of ProxyManager (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255814">Bug 255814</a>. [Net] Wrong methods and types used in org.eclipse.core.net (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255959">Bug 255959</a>. [Net] Windows IE setting "Use the same proxy server for all protocols" is not consumed by Eclipse (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255981">Bug 255981</a>. [Net] Setting direct provider on ProxySelector doesn't affect ProxyManager (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256080">Bug 256080</a>. [Net] New UI for proxy preferences show password in plain text (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256081">Bug 256081</a>. [Net] Remove unnecessary API from IProxyData (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 18, 2008, 12:14 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
