Additional submission for I20081202-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 01, 2008, 5:23 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=49316">Bug 49316</a>. [Workbench] isStarting() public API of Workbench (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=141690">Bug 141690</a>. [Graphics] Improve Look and Feel of FilteredTree (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 01, 2008, 4:40 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
