The map file has been updated for the following Bug changes: + Bug 80577. [Repo View] Author not shown in remote compares (FIXED) + Bug 193324. [Sync View] Provide compare editor input for a single file that support editing on both sides (FIXED) + Bug 251215. [Edit] Highlight current line (FIXED) + Bug 256562. Possibly broken code in TeamContentProviderDescriptor.readExtension(IExtension) (FIXED) + Bug 256742. Avoid dead code problem (FIXED) + Bug 257172. [Net] Get rid of System.getenv(String) invocation (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.team.ui

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,17 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (December 02, 2008, 1:39 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=80577">Bug 80577</a>. [Repo View] Author not shown in remote compares (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=193324">Bug 193324</a>. [Sync View] Provide compare editor input for a single file that support editing on both sides (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=251215">Bug 251215</a>. [Edit] Highlight current line (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256562">Bug 256562</a>. Possibly broken code in TeamContentProviderDescriptor.readExtension(IExtension) (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256742">Bug 256742</a>. Avoid dead code problem (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257172">Bug 257172</a>. [Net] Get rid of System.getenv(String) invocation (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 25, 2008, 1:17 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
