Build submission for maintenance build M20081203-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,22 @@
 <h1>Eclipse Platform Build Notes (3.3)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 02, 2008, 6:54 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=177337">Bug 177337</a>. Make nested services API (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=229127">Bug 229127</a>. [Services] Provide the IWorkbenchLocationService (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=251604">Bug 251604</a>. [Contributions] MenuService registry changes causes CME (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252484">Bug 252484</a>. [ViewMgmt] View becomes disabled and completly nonfunctional (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=253174">Bug 253174</a>. [Contributions] Contributions to the status trim bar are never disposed. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255053">Bug 255053</a>. [Viewers] NPE in ColumnViewerToolTipSupport (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256293">Bug 256293</a>. [Contributions] [regression] IElementUpdater.updateElement() - IWorkbenchPartSite service not in scope of provided UIElement (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256314">Bug 256314</a>. [Contributions] Accelerators in menus are not installed until menu shown (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256464">Bug 256464</a>. [Import/Export] ILeveledImportStructureProvider interface is not declared public (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256924">Bug 256924</a>. [About] About dialog text - Add capability to read system properties (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256926">Bug 256926</a>. [About] About dialog does not change about.mappings for dynamic product (FIXED)<br>
+  </p>
+
 <p>Integration Build (November 11, 2008, 2:54 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
