--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -85,7 +85,7 @@ value is no longer reliable.</p>
 <p><strong>Action required:</strong> This is a backwards compatible change. No action required. </p>
 <p>&nbsp;  </p>
 
-<h2>Milesont 4- December 12, 2008</h2>
+<h2>Milestone 4 - December 12, 2008</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=234854">Bug 234854</a>: synchronize remaining 3 public get*Manager() methods from DebugPlugin<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=136741">Bug 136741</a>: [Memory View] Base address not initially scrolled into view with built-in renderings<br>
