Submission for I20081208-1300 M4 candidate

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,14 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 08, 2008, 1:50 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255829">Bug 255829</a>. [JFace] Wrong types and methods used in org.eclipse.jface (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257752">Bug 257752</a>. [Metadata] IWorkbenchBrowserSupport needs @noextend flag (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257790">Bug 257790</a>. [MPE] [regression] MultiPageEditorPart.pageChange(int) fires PageChangedEvent if selected page is null. (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 05, 2008, 6:12 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
