*** empty log message ***

--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -95,6 +95,7 @@ value is no longer reliable.</p>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=212605">Bug 212605</a>: [launching] Mac OS X launcher should not hide the necessary -XstartOnFirstThread<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=257970">Bug 257970</a>: SWT Exception shutting down Eclipse<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=236296">Bug 236296</a>: &quot;update the classpath settings&quot; feature sets wrong project  compiler compliance level<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=244059">Bug 244059</a>: [breakpoints] Allow breakpoints to specify when they should be overwritten on import<br>
 
 <h2>December 2, 2008</h2>
 <h3>Problem Reports Fixed</h3>
