Minor update in customization test

--- a/org.eclipse.ua.tests/non_junit/test_plan.htm
+++ b/org.eclipse.ua.tests/non_junit/test_plan.htm
@@ -715,7 +715,7 @@ in the toolbars, and italic sans-serif in the rest of the UI.</p>
   </li>
   <li>
 
-<p class=MsoListNumber2 style='tab-stops:.5in'>Type &quot;active link below&quot; (no 
+<p class=MsoListNumber2 style='tab-stops:.5in'>Type &quot;active help&quot; (no 
 quotes) in the search field in the browser, and search.</p>
 
   </li>
