--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 10, 2008, 11:57 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=246593">Bug 246593</a>. [Markers] Optimize problems view result caching (NEW)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256124">Bug 256124</a>. [Menu] Allow programatic additions to the menu system via the extension point (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257903">Bug 257903</a>. [Contributions] ToolTip on the ToolBar and Menu Visibility tabs of Customize Perspective Dialog should be better placed or appear after a delay. (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258113">Bug 258113</a>. [64] CocoaUIEnhancer not loaded on x86_64 (ASSIGNED)<br>
+  </p>
+
 <p>Integration Build (December 08, 2008, 1:50 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
