The map file has been updated for the following Bug changes: + Bug 258114. NPE in TextLayout (FIXED)
The following projects have changed:
org.eclipse.compare

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (December 10, 2008, 6:45 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258114">Bug 258114</a>. NPE in TextLayout (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 02, 2008, 1:39 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
