--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 10, 2008, 5:39 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257903">Bug 257903</a>. [Contributions] ToolTip on the ToolBar and Menu Visibility tabs of Customize Perspective Dialog should be better placed or appear after a delay. (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 10, 2008, 11:57 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
