Build submission for maintenance build M20081212-0800

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,13 @@
 <h1>Eclipse Platform Build Notes (3.3)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (December 12, 2008, 11:38 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=249527">Bug 249527</a>. [Preferences] Cannot perform scrolling via keyboard in preference dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256839">Bug 256839</a>. [Workbench] Workbench.shutdown() doesn't complete due to exception (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 02, 2008, 6:54 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
