--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -56,7 +56,6 @@ thread-filtered, etc.).
   </li>
 </ul>
 
-
 <h3>ILaunchConfiguration.getLocation() can return null</h3>
 <p><strong>What is affected:</strong> Clients that call ILaunchConfiguration.getLocation()</p>
 <p><strong>Description:</strong> In release 3.4 and earlier, ILaunchConfiguration.getLocation() was not specified 
@@ -88,6 +87,7 @@ value is no longer reliable.</p>
 <h2>December 16, 2008</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=258235">Bug 258235</a>: Switch LaunchConfigurationFilteredTree to new look of FilteredTree<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=258058">Bug 258058</a>: Buttons not greyed out in Organize Favorites dialog<br>
 
 <h2>Milestone 4 - December 12, 2008</h2>
 <h3>Problem Reports Fixed</h3>
