The map file has been updated for the following Bug changes: + Bug 120602. [History View] Should have an Open With (FIXED) + Bug 150591. [Patch] Team -> Apply Patch and line endings (FIXED) + Bug 244425. Using mixed tags causes synchronization failure (FIXED) + Bug 254558. WordMergeViewer.openComparison threw CoreException: " Invalid property name: Close." (FIXED) + Bug 255814. [Net] Wrong methods and types used in org.eclipse.core.net (FIXED) + Bug 255836. [Net] Wrong method used in org.eclipse.ui.net (FIXED) + Bug 257199. [Sync View] Incomplete labels in compare editor (FIXED) + Bug 257696. IEncodedStorage#getFullPath() in org.eclipse.team.internal.ui.history.FileRevisionEditorInput should better handle revisions (FIXED)
The following projects have changed:
org.eclipse.ui.net
org.eclipse.compare
org.eclipse.core.tests.net
org.eclipse.team.cvs.core
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.compare.win32
org.eclipse.compare.tests
org.eclipse.team.ui
org.eclipse.team.tests.cvs.core

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,19 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (December 16, 2008, 12:04 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=120602">Bug 120602</a>. [History View] Should have an Open With (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=150591">Bug 150591</a>. [Patch] Team -> Apply Patch and line endings (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=244425">Bug 244425</a>. Using mixed tags causes synchronization failure (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=254558">Bug 254558</a>. WordMergeViewer.openComparison threw CoreException: " Invalid property name: Close." (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255814">Bug 255814</a>. [Net] Wrong methods and types used in org.eclipse.core.net (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255836">Bug 255836</a>. [Net] Wrong method used in org.eclipse.ui.net (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257199">Bug 257199</a>. [Sync View] Incomplete labels in compare editor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257696">Bug 257696</a>. IEncodedStorage#getFullPath() in org.eclipse.team.internal.ui.history.FileRevisionEditorInput should better handle revisions (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 10, 2008, 6:45 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
