Updated for the I20090106-0800 build

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,26 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 05, 2009, 3:00 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=107753">Bug 107753</a>. [Decorators] Exception handling message in decoration job could be improved (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=211350">Bug 211350</a>. [ErrorHandling] Need better error handling in PerspectiveRegistry (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=231327">Bug 231327</a>. Tabbing into table sets focus to first column regardless of its visibility (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=249992">Bug 249992</a>. [Databinding] No radio button support with single property in JFace Databinding (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=254936">Bug 254936</a>. [Coolbar] Cannot switch perspective in a RCP application without Coolbars (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=255229">Bug 255229</a>. [Viewers] [3.5] NPE in ColumnViewerToolTipSupport (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257820">Bug 257820</a>. [FastView] FastView bar shows unpressed view icon after dragging active fastview to the oposite side of the screen (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=257956">Bug 257956</a>. [Markers] Improvement requests to Problems View / Configure Contents dialog (REOPENED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258066">Bug 258066</a>. [Markers] Delete appears twice in the context  menu for Tasks View and Bookmarks View (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258148">Bug 258148</a>. Unavailable command group tooltip entry in filtered tree lists wrong command group (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258153">Bug 258153</a>. Making a wizard visible in CPD does not make the New menu visible. (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258772">Bug 258772</a>. [DataBinding] Eliminate deprecated API filters (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258774">Bug 258774</a>. [DataBinding] Dead code in PolicyTest (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258775">Bug 258775</a>. [DataBinding] IObservablesListener should be @noextend instead of @noimplement (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259477">Bug 259477</a>. [statushandling] WEH#setStatusDialog is never used. (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 15, 2008, 7:43 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
