--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (January 06, 2009, 1:57 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259940">Bug 259940</a>. [Viewers] Document providers are not used when comparing revisions from CVS (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 16, 2008, 12:04 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
