Update for 3.4.2 build

--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.3)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 06, 2009, 9:49 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=253956">Bug 253956</a>. [Viewers] TreeViewer Widget Dispose Error (FIXED)<br>
+  </p>
+
 <p>Integration Build (December 12, 2008, 11:38 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
