--- a/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
+++ b/ant/org.eclipse.ant.core/buildnotes_platform-ant.html
@@ -15,7 +15,7 @@ Eclipse 3.5 Ant Build Notes</h1>
   <li>Added API constants for Ant launch configuration attributes - <code>org.eclipse.ant.ui.launching.IAntLaunchConfigurationConstants</code>.</li>
 </ul>
 
-<h2>ember 22, 2008</h2>
+<h2>December 22, 2008</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=215530">Bug 215530</a>: Ant targets no longer bring up &quot;Ant Configuration Settings&quot; Dialog box<br>
 
