--- a/org.eclipse.debug.core/buildnotes_platform-debug.html
+++ b/org.eclipse.debug.core/buildnotes_platform-debug.html
@@ -100,6 +100,7 @@ value is no longer reliable.</p>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=259107">Bug 259107</a>: [console] Console Deadlock when too much information written<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=253955">253955</a>: Bug 253955 &ndash; Hitting breakpoint gives focus to workbench instead of dialog<br>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=245314">245314</a>: Bug 245314 &ndash; Populating variables view with logical structures is really slow<br>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=253257">253257</a>: Bug 253257 &ndash; Source lookup job data getting overwritten while running<br>
 
 <h2>December 16, 2008</h2>
 <h3>Problem Reports Fixed</h3>
