The map file has been updated for the following Bug changes: + Bug 169386. [Theme] More Java editor features in Compare Editor (FIXED) + Bug 223857. [Viewers] Should be able to set the encoding of text pane in compare editor (ASSIGNED) + Bug 241649. [Dialogs] Resizing of the "compare with other" dialog (FIXED) + Bug 258941. [Net] Unknown process error (FIXED)
The following projects have changed:
org.eclipse.compare
org.eclipse.team.cvs.ui
org.eclipse.core.net
org.eclipse.compare.tests

--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,15 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (January 13, 2009, 1:52 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=169386">Bug 169386</a>. [Theme] More Java editor features in Compare Editor (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=223857">Bug 223857</a>. [Viewers] Should be able to set the encoding of text pane in compare editor (ASSIGNED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=241649">Bug 241649</a>. [Dialogs] Resizing of the "compare with other" dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=258941">Bug 258941</a>. [Net] Unknown process error (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 06, 2009, 1:57 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
