--- a/bundles/org.eclipse.ui/buildnotes_workbench.html
+++ b/bundles/org.eclipse.ui/buildnotes_workbench.html
@@ -12,6 +12,12 @@
 <h1>Eclipse Platform Build Notes (3.3)<br>
 JFace and Workbench</h1>
 
+<p>Integration Build (January 14, 2009, 7:45 a.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=229993">Bug 229993</a>. [ActivityMgmt] Dynamically contributed activity extensions are not registering (NEW)<br>
+  </p>
+
 <p>Integration Build (January 06, 2009, 9:49 a.m.)</p>
   <p>Problem reports updated</p>
   <p>
