--- a/bundles/org.eclipse.team.core/buildnotes_team.html
+++ b/bundles/org.eclipse.team.core/buildnotes_team.html
@@ -12,6 +12,18 @@
 <h1>Eclipse Platform Build Notes (3.5)<br>
 Team, Compare and CVS</h1>
 
+<p>Integration Build (January 20, 2009, 1:32 p.m.)</p>
+  <p>Problem reports updated</p>
+  <p>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=236439">Bug 236439</a>. [Viewers] Provide some way to hide outgoing annotations (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=241649">Bug 241649</a>. [Dialogs] Resizing of the "compare with other" dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=252086">Bug 252086</a>. [Viewers] Text compare is not visible when editor background color is set to gray (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=256270">Bug 256270</a>. [Patch] Patch creation failure should better identify offending file (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259718">Bug 259718</a>. Compare editor save is shaky and does not show Ctrl+S hint in context menu (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=259719">Bug 259719</a>. 'Save' should not be in context menu when compare is shown in dialog (FIXED)<br>
+<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=261025">Bug 261025</a>. [Viewers] Changing encoding in compare editor doesn't trigger structured differences recalculation (FIXED)<br>
+  </p>
+
 <p>Integration Build (January 13, 2009, 1:52 p.m.)</p>
   <p>Problem reports updated</p>
   <p>
